base/fluentd/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: logging
  labels:
    app: fluentd
    app.kubernetes.io/name: fluentd
    app.kubernetes.io/component: log-collector
    app.kubernetes.io/part-of: efk
    app.kubernetes.io/version: v1.4.2
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
        app.kubernetes.io/name: fluentd
        app.kubernetes.io/component: log-collector
        app.kubernetes.io/part-of: efk
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1.4.2-debian-elasticsearch-1.1
        securityContext:
          runAsUser: 0
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["DAC_READ_SEARCH"]
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            memory: 768Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
